--- a/account/Makefile
+++ b/account/Makefile
@@ -1,8 +1,9 @@
 ENV= LOG_LEVEL='debug'
-ENV_HTTP_LISTEN_ADDR= HTTP_LISTEN_ADDR='0.0.0.0:8001'
-ENV_GRPC_LISTEN_ADDR= GRPC_LISTEN_ADDR='0.0.0.0:7001'
-DB_URL= "root:123456@tcp(127.0.0.1:3306)/sdmht?parseTime=true&multiStatements=true"
-ENV_REDIS_URL= REDIS_URL= "redis://127.0.0.1:6379"
+LOG_DISABLE_SAMPLING= LOG_DISABLE_SAMPLING='true'
+HTTP_LISTEN_ADDR= HTTP_LISTEN_ADDR='0.0.0.0:8001'
+GRPC_LISTEN_ADDR= GRPC_LISTEN_ADDR='0.0.0.0:7001'
+DB_URL= DB_URL='root:123456@tcp(127.0.0.1:3306)/sdmht?parseTime=true&multiStatements=true'
+REDIS_URL= REDIS_DB_URL='redis://127.0.0.1:6379'
 
 run:
-	$(ENV) $(ENV_HTTP_LISTEN_ADDR) $(ENV_GRPC_LISTEN_ADDR) $(REDIS_URL) go run app/account/main.go
+	$(ENV) $(LOG_DISABLE_SAMPLING) $(HTTP_LISTEN_ADDR) $(GRPC_LISTEN_ADDR) $(DB_URL) $(REDIS_URL) go run app/account/main.go
