--- a/sdmht_conn/Makefile
+++ b/sdmht_conn/Makefile
@@ -1,9 +1,10 @@
 ENV= LOG_LEVEL='debug'
-ENV_WS_LISTEN_ADDR= WS_LISTEN_ADDR='0.0.0.0:4090'
-ENV_GRPC_LISTEN_ADDR= GRPC_LISTEN_ADDR='0.0.0.0:7091'
-ENV_MNG_LISTEN_ADDR= MNG_LISTEN_ADDR='0.0.0.0:7090'
+LOG_DISABLE_SAMPLING= LOG_DISABLE_SAMPLING='true'
+WS_LISTEN_ADDR= WS_LISTEN_ADDR='0.0.0.0:4090'
+GRPC_LISTEN_ADDR= GRPC_LISTEN_ADDR='0.0.0.0:7091'
+MNG_LISTEN_ADDR= MNG_LISTEN_ADDR='0.0.0.0:7090'
 # ACCOUNT_ACCESS_ADDR= 0.0.0.0:17001
-ENV_HEARTBEAT_INTERVAL= HEARTBEAT_INTERVAL=10
+HEARTBEAT_INTERVAL= HEARTBEAT_INTERVAL=10
 
 run:
-	$(ENV) $(ENV_WS_LISTEN_ADDR) $(ENV_GRPC_LISTEN_ADDR) $(ENV_MNG_LISTEN_ADDR) $(ENV_HEARTBEAT_INTERVAL) go run app/sdmht_conn/main.go
+	$(ENV) $(LOG_DISABLE_SAMPLING) $(WS_LISTEN_ADDR) $(GRPC_LISTEN_ADDR) $(MNG_LISTEN_ADDR) $(HEARTBEAT_INTERVAL) go run app/sdmht_conn/main.go
