--- a/sdmht_conn/Makefile
+++ b/sdmht_conn/Makefile
@@ -3,6 +3,7 @@ LOG_DISABLE_SAMPLING= LOG_DISABLE_SAMPLING='true'
 WS_LISTEN_ADDR= WS_LISTEN_ADDR='0.0.0.0:4090'
 GRPC_LISTEN_ADDR= GRPC_LISTEN_ADDR='0.0.0.0:7091'
 MNG_LISTEN_ADDR= MNG_LISTEN_ADDR='0.0.0.0:7090'
+# SERVE_ADDR= SERVE_ADDR='0.0.0.0:9999'
 # ACCOUNT_ACCESS_ADDR= 0.0.0.0:17001
 HEARTBEAT_INTERVAL= HEARTBEAT_INTERVAL=3600
 
