[sdmht] merge multi server

--- a/sdmht_conn/Makefile
+++ b/sdmht_conn/Makefile
@@ -1,11 +1,12 @@
 ENV= LOG_LEVEL='debug'
 LOG_DISABLE_SAMPLING= LOG_DISABLE_SAMPLING='true'
 WS_LISTEN_ADDR= WS_LISTEN_ADDR='0.0.0.0:4090'
-GRPC_LISTEN_ADDR= GRPC_LISTEN_ADDR='0.0.0.0:7091'
-MNG_LISTEN_ADDR= MNG_LISTEN_ADDR='0.0.0.0:7090'
+HTTP_LISTEN_ADDR= HTTP_LISTEN_ADDR='0.0.0.0:7091'
 # SERVE_ADDR= SERVE_ADDR='0.0.0.0:9999'
-# ACCOUNT_ACCESS_ADDR= 0.0.0.0:17001
 HEARTBEAT_INTERVAL= HEARTBEAT_INTERVAL=3600
+DB_URL= DB_URL="root:123456@tcp(127.0.0.1:3306)/sdmht?parseTime=true&multiStatements=true"
+REDIS_URL= REDIS_DB_URL="redis://127.0.0.1:6379"
+ACCOUNT_ACCESS_ADDR= ACCOUNT_ACCESS_ADDR="0.0.0.0:7001"
 
 run:
-	$(ENV) $(LOG_DISABLE_SAMPLING) $(WS_LISTEN_ADDR) $(GRPC_LISTEN_ADDR) $(MNG_LISTEN_ADDR) $(HEARTBEAT_INTERVAL) go run app/sdmht_conn/main.go
+	$(ENV) $(LOG_DISABLE_SAMPLING) $(WS_LISTEN_ADDR) $(HTTP_LISTEN_ADDR) $(MNG_LISTEN_ADDR) $(HEARTBEAT_INTERVAL) $(DB_URL) $(REDIS_URL) $(ACCOUNT_ACCESS_ADDR) go run app/sdmht_conn/main.go
